--- a/views/index.ejs
+++ b/views/index.ejs
@@ -8,24 +8,86 @@
 </head>
 <body>
     <div class="container">
-        <h1>Join</h1>
-        <form action="">
+        <h1>Log In</h1><br>
+        <form action="/login" method="POST">
 
             <div class="form-group">
-                <label for="nickname">참여 닉네임</label>
+                <label for="login-id">아이디</label>
+                <input type="text" class="form-control" id="login-id" placeholder="아이디를 입력하세요">
+            </div>
+            <div class="form-group">
+                <label for="password">비밀번호</label>
+                <input type="login-password" class="form-control" id="login-password" placeholder="비밀번호를 입력하세요">
+            </div>
+            <button type="button" class="btn btn-default" style="float: right;" id="loginBtn">로그인</button>
+        </form>
+        
+        <br><br><br>
+        <hr>
+        <h1>Sign Up</h1><br>
+        <form action="/user" method="POST">
+
+            <div class="form-group">
+                <label for="userid">아이디</label>
+                <input type="text" class="form-control" id="userid" placeholder="아이디를 입력하세요">
+            </div>
+            <div class="form-group">
+                <label for="password">비밀번호</label>
+                <input type="password" class="form-control" id="password" placeholder="비밀번호를 입력하세요">
+            </div>
+            <div class="form-group">
+                <label for="nickname">닉네임</label>
                 <input type="text" class="form-control" id="nickname" placeholder="닉네임을 입력하세요">
             </div>
-            
-            <button type="submit" class="btn btn-default">제출</button>
+            <button type="button" class="btn btn-default" style="float: right;" id="signUpBtn">회원가입</button>
         </form>
-    
+        
+        <button type="button" class="btn btn-default" style="float: right;" id="signUpBtn2">로그인2</button>
     </div>
     
 
     <%- include ("./footer.ejs") -%>
 </body>
+<script>
+    $("#loginBtn").click(function(){
+        $.ajax({
+            url : 'http://localhost:3000/login',
+            method : 'post',
+            data : {
+                userid : $("#login-id").val(),
+                password : $("#login-password").val()
+            },
+            success : function (data) {
+                console.log("성공");
+                document.location.href = '/waiting-room';
+            },
+            error : function (err) {
+                console.log(err.toString());
+            }
+        });
+    });
+    $("#signUpBtn").click(function(){
+        $.ajax({
+            url : 'http://localhost:3000/user',
+            method : 'post',
+            data : {
+                userid : $("#userid").val(),
+                password : $("#password").val(),
+                nickname : $("#nickname").val()
+            },
+            success : function (data) {
+                console.log("성공");
+                document.location.href = '/waiting-room';
+            },
+            error : function (err) {
+                console.log(err.toString());
+            }
+        });
+    });
+    $("#signUpBtn2").click(function(){
+        // alert('test');
+        // location.href="localhost:3000/waiting-room";
+        location.href = '/waiting-room';
+    });
+</script>
 </html>
-
-<!-- https://velopert.com/332 -->
-<!-- https://jhdream.tistory.com/18 -->
-<!-- https://junspapa-itdev.tistory.com/9 -->
