--- a/views/index.ejs
+++ b/views/index.ejs
@@ -17,7 +17,7 @@
             </div>
             <div class="form-group">
                 <label for="password">비밀번호</label>
-                <input type="login-password" class="form-control" id="login-password" placeholder="비밀번호를 입력하세요">
+                <input type="password" class="form-control" id="login-password" placeholder="비밀번호를 입력하세요">
             </div>
             <button type="button" class="btn btn-default" style="float: right;" id="loginBtn">로그인</button>
         </form>
@@ -42,11 +42,17 @@
             <button type="button" class="btn btn-default" style="float: right;" id="signUpBtn">회원가입</button>
         </form>
         
-        <button type="button" class="btn btn-default" style="float: right;" id="signUpBtn2">로그인2</button>
     </div>
     
-
+    
     <%- include ("./footer.ejs") -%>
+    <!-- <%if(status == 401){ %>
+        <script>
+            $(document).ready(function(){
+                alert("로그인 후 이용");
+            });
+        </script>
+    <% } %> -->
 </body>
 <script>
     $("#loginBtn").click(function(){
