--- a/views/room.ejs
+++ b/views/room.ejs
@@ -7,7 +7,7 @@
     <%- include ("./header.ejs") %>
     
     <style>
-        /* .chat_log{ width: 95%; height: 200px; } */
+        #chatLog{height: 200px; }
         .name{ width: 10%; }
         .message{ width: 70%; }
         /* .chat{ width: 10%; } */
@@ -25,7 +25,7 @@
           <form id="chat">
             <div class="row">
                 <div class="col-lg-3">
-                    <input id="name" class="form-control" type="text" readonly value="nickname@id">
+                    <input id="name" class="form-control" type="text" readonly value="<%=userId%>">
                 </div>
                 <div class="col-lg-9">
                     <input id="message" class="form-control" type="text" placeholder="input msg">
@@ -43,5 +43,32 @@
 </body>
 <script>
     var socket = io();
+    socket.emit('join-room',{"roomId":"<%=roomId%>", "userId":"<%=userId%>"});
+    socket.on('new', function(data){
+        console.log(data.userId);
+        $("#name").val(data.userId);
+
+    });
+    socket.on('room-broadcast', function(data){
+        $('#chatLog').append(data.msg +'\n');
+        $('#chatLog').scrollTop($('#chatLog')[0].scrollHeight);
+
+    });
+
+    $('#chat').on('submit', function(e){
+        socket.emit('send-msg', '<%=roomId%>',$('#name').val(), $('#message').val());
+        $('#message').val('');
+        $('#message').focus();
+        e.preventDefault(); // 이벤트 정지
+    });
+
+    socket.on('receive-msg', function(text){
+        $('#chatLog').append(text +'\n');
+        $('#chatLog').scrollTop($('#chatLog')[0].scrollHeight);
+    });
+
+    $(window).bind("beforeunload", function (e){
+        socket.emit('disconnect', '<%=roomId%>','이름이');
+    });
 </script>
 </html>
